--- a/PryConexiónBD/Properties/Resources.resx
+++ b/PryConexiónBD/Properties/Resources.resx
@@ -118,10 +118,28 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="ImgAgregar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImgAgregar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ImgBuscar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImgBuscar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgCancelar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgCancelar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgEliminar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgEliminar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="imgHome" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imgHome.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="ImgModificar" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ImgModificar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="imgSalir" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imgSalir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgVolver" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgVolver.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
