Login en funcionamiento

--- a/PryConexiónBD/Properties/Resources.resx
+++ b/PryConexiónBD/Properties/Resources.resx
@@ -136,6 +136,12 @@
   <data name="ImgModificar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ImgModificar.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="imgOjoAbierto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgOjoAbierto.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="imgOjoCerrado" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\imgOjoCerrado.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="imgSalir" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\imgSalir.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
